<resources>
    <string name="app_name">RoomJetPack</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="peculiarities">Peculiarities</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="title_activity_other">OtherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>